bug:ui_type behind cursor if menu is active. z-index not working

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -70,8 +70,6 @@ body{
   align-items: center;
   margin-right: 0px;
   //set pointer
-  cursor: pointer;
-
   //set menu button on top of overlay-menu
   z-index: 2;
 }
